[metadata]
name = nice_tt6-pp81381
description = Nice TT6 tubular motor controller APIs
long_description = file: README.md
long_description_content_type = text/markdown
author = Phil Porter
url = https://github.com/pp81381/nice_tt6
classifiers=
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Terminals :: Serial
    Topic :: Home Automation
    Framework :: AsyncIO
    Development Status :: 4 - Beta

[options]
packages = find:
python_requires = ~=3.8
install_requires =
    pyserial>=3.4
    pyserial_asyncio>=0.4

[options.packages.find]
exclude = tests*

[options.package_data]
nice_tt6.emulator = config/*.json